--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header class="main-header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
-                <h1 class="logo">Tu Pizza</h1>
+                <h1 class="logo">ADreamInGrandLine</h1>
             </div>
             <div class="main-header__contactInfo column column--50">
                 <p class="main-header__contactInfo__phone">
-                    <span class="icon-phone">999-9999
+                    <span class="icon-phone">+56 9 9305 0536
                     </span>
                 </p>
                 <p class="main-header__contactInfo__addres">
@@ -42,52 +42,48 @@
         </div>
     </nav>
     <section class="banner">
-        <img src="img/banner.jpg" alt="" class="banner__img">
-        <div class="banner__content">La mejor Pizza del Mundo</div>
+        <img src="https://wallpaperaccess.com/full/11020287.jpg" alt="" class="banner__img">
+        <div class="banner__content">One Piece</div>
     </section>
     <main class="main">
         <section class="group--color">
             <div class="container">
-                <h2 class="main__title">Hola Bienvenido</h2>
+                <h2 class="main__title">Hola Bienvenido a ADreamInGrandLine</h2>
                 <p class="main_txt">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, repudiandae ea optio eligendi aut odio.
+                    ¡Embárcate en la aventura de One Piece y sumérgete en el mundo de los piratas!
                 </p>
             </div>
         </section>
         <section class="group main__about_description">
             <div class="container container--flex">
                 <div class="column column--50">
-                    <img src="img/pizza1.jpg" alt="">
+                    <img src="https://i.pinimg.com/564x/40/8e/fd/408efd2a11ee98916bf3f8b5c9ada8b6.jpg" alt="">
                 </div>
                 <div class="column column--50">
-                    <h3 class="column__title">Lorem ipsum dolor sit amet.</h3>
-                    <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem.Quae natus necessitatibus animi nam rem eveniet dignissimos, accusantium eum veniam ipsa quaerat cumque voluptatibus ex, minima corporis fugit ipsam explicabo! Rem</p>
+                    <h3 class="column__title">Historia y origen.</h3>
+                    <p class="column__txt">La historia de «One Piece» gira en torno a un grupo de piratas liderados por Monkey D. Luffy, que busca el One Piece para convertirse en el Rey de los Piratas. Este tesoro legendario fue dejado en un lugar desconocido del Grand Line por el anterior Rey de los Piratas, Gol D. Roger. Su existencia fue revelada por Roger antes de su ejecución, lo que desató la Gran Era de los Piratas.</p>
                     <a href="" class="btn btn--contact">Contact</a>
                 </div>
             </div>
         </section>
         <section class="group today-special">
-            <h2 class="group__title">Pizza de Hoy</h2>
+            <h2 class="group__title"> Momentos más destacados y emocionantes de OP</h2>
             <div class="container container--flex">
                 <div class="column column--50--25">
-                    <img src="img/plato1.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 1</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="https://i.pinimg.com/564x/ee/82/6a/ee826a88847d2b8f663b269be63be150.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Ace muere.</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato2.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 2</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="https://i.pinimg.com/564x/e5/70/60/e5706055b453ad4bedafd1c251fa1b1b.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">¡GEAR 5!</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato3.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 3</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="https://i.pinimg.com/564x/cc/55/c3/cc55c3f29e04209bfd86d0f7516158f2.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">Adiós Merry.</div>
                 </div>
                 <div class="column column--50--25">
-                    <img src="img/plato4.jpg" alt="" class="today-special__img">
-                    <div class="today-special__tittle">Pizza Special 4</div>
-                    <div class="today-special__price">$99</div>
+                    <img src="https://i.pinimg.com/564x/a5/03/0c/a5030c0dcddda799a0b57617f3ee5f0c.jpg" alt="" class="today-special__img">
+                    <div class="today-special__tittle">¡¡Quiero vivir!!</div>
                 </div>
             </div>
         </section>
@@ -97,12 +93,19 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat illo atque impedit, repudiandae </p>
+                <p class="column__txt">Parque Central, Centro Comercial Talcahuano </p>
+                <p class="column__txt">
+                    Horarios de atención:
+                    <br>
+                    Lunes a viernes: 9:00 - 18:00
+                    <br>
+                    Sábados: 10:00 - 14:00
+                </p>
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
                 <p class="column__txt">Mi calle 123 Talcahuano</p>
-                <p class="column__txt">Telefono: 999-999-999</p>
+                <p class="column__txt">Telefono: +56 9 9305 0536</p>
                
             </div>
             <div class="column column--33">
@@ -111,7 +114,7 @@
                 <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
                 <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
             </div>
-            <p class="copy">@ 2020 Tu Pizza | Todos los derechos reservados</p>
+            <p class="copy">@ 2024 ADreamInGrandLine | Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="js/menu.js"></script>
