--- a/nosotros.html
+++ b/nosotros.html
@@ -12,11 +12,11 @@
     <header class="main-header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
-                <h1 class="logo">Tu Pizza</h1>
+                <h1 class="logo">ADreamInGrandLine</h1>
             </div>
             <div class="main-header__contactInfo column column--50">
                 <p class="main-header__contactInfo__phone">
-                    <span class="icon-phone">999-9999
+                    <span class="icon-phone">+56 9 9305 0536
                     </span>
                 </p>
                 <p class="main-header__contactInfo__addres">
@@ -43,35 +43,35 @@
         </div>
     </nav>
     <section class="banner">
-        <img src="img/banner_about.jpg" alt="" class="banner__img">
-        <div class="banner__content">Nuestra casa es tu casa</div>
+        <img src="https://i.pinimg.com/originals/ff/59/98/ff59987883cc11a51e74dd450a594f50.jpg" alt="" class="banner__img"> 
+        <div class="banner__content">One Piece</div>
     </section>
     <main class="main">
         <section class="group--color">
             <div class="container">
-                <h2 class="main__title">Nuestro Team</h2>
+                <h2 class="main__title">Jolly Roger</h2>
                 <p class="main_txt">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, repudiandae ea optio eligendi aut odio.
+                Conocido como Marca de Calavera, es el emblema principal (Marca o Calavera o un Símbolo) de una tripulación pirata.
                 </p>
             </div>
         </section>
       	<section class="group our-team">
-      		<h2 class="group__title">Los Chefs</h2>
+      		<h2 class="group__title">Los personajes más importantes de OP</h2>
       		<div class="container container--flex">
       			<div class="column column--33">
-      				<h3 class="our-team__title">Javier</h3>
-      				<img src="img/chef1.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quidem ratione facere facilis aut magni atque asperiores molestiae, qui quos ipsa consectetur blanditiis quia, deleniti unde est repudiandae sint veniam.</p>
+      				<h3 class="our-team__title">Gol D. Roger</h3>
+      				<img src="img/Roger_Manga_Color_Scheme_at_Age_51.webp" alt="" class="our-team__img">
+      				<p class="our-team__txt">Conocido como el «Rey de los Piratas», fue un pirata legendario que alcanzó la cima del Grand Line y conquistó la isla de Raftel (anteriormente conocida como Laugh Tale), donde se encuentra el One Piece, un tesoro de incalculable valor. Su discurso sobre el One Piece antes de ser ejecutado desencadenó lo que se conoce como la «Gran Era de la Piratería», un período en el que innumerables piratas se lanzaron al mar en busca de fama y riqueza. Esto creó un mundo repleto de aventuras y conflictos, lo que a su vez dio forma al escenario en el que se desarrolla la historia.</p>
       			</div>
       			<div class="column column--33">
-      				<h3 class="our-team__title">Marta</h3>
-      				<img src="img/chef2.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quas sit facilis. Ea similique tenetur necessitatibus doloribus repellendus, nesciunt possimus iure, vero, aspernatur blanditiis neque. Earum sint, reprehenderit recusandae ea!</p>
+      				<h3 class="our-team__title">Shanks</h3>
+      				<img src="img/Shanks.jpeg" alt="" class="our-team__img">
+      				<p class="our-team__txt">Es el capitán de los Piratas del Pelirrojo y uno de los cuatro emperadores del mar. Fue el que motivó a Luffy a convertirse en pirata. Estuvo de aprendiz en la banda de Gol D. Roger, el Rey de los Piratas.</p>
       			</div>
       			<div class="column column--33">
-      				<h3 class="our-team__title">Ricardo</h3>
-      				<img src="img/chef3.jpg" alt="" class="our-team__img">
-      				<p class="our-team__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, at delectus tempora alias velit facilis eius debitis cupiditate molestias reiciendis. Quam voluptatibus nostrum sapiente blanditiis non commodi aperiam minima accusamus!</p>
+      				<h3 class="our-team__title">Monkey D. Luffy</h3>
+      				<img src="img/2df2c1227f0fb76c2384fcca7e704b97.jpg" alt="" class="our-team__img">
+      				<p class="our-team__txt">Más conocido como Luffy «Sombrero de Paja», es el protagonista principal de la serie de manga y anime One Piece. Es el capitán y fundador de los Piratas de Sombrero de Paja así como uno de los Cuatro Emperadores que gobiernan los mares del Nuevo Mundo. Comió una fruta del diablo llamada fruta Gomu Gomu, que le convirtió en un hombre de goma.</p>
       			</div>
       		</div>
       	</section>
@@ -81,12 +81,19 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat illo atque impedit, repudiandae </p>
+                <p class="column__txt">Parque Central, Centro Comercial Talcahuano </p>
+                <p class="column__txt">
+                    Horarios de atención:
+                    <br>
+                    Lunes a viernes: 9:00 - 18:00
+                    <br>
+                    Sábados: 10:00 - 14:00
+                </p>
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
                 <p class="column__txt">Mi calle 123 Talcahuano</p>
-                <p class="column__txt">Telefono: 999-999-999</p>
+                <p class="column__txt">Telefono: +56 9 9305 0536</p>
                
             </div>
             <div class="column column--33">
@@ -95,7 +102,7 @@
                 <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
                 <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
             </div>
-            <p class="copy">@ 2020 Tu Pizza | Todos los derechos reservados</p>
+            <p class="copy">@ 2024 ADreamInGrandLine | Todos los derechos reservados</p>
         </div>
     </footer>
     <script src="js/menu.js"></script>
