--- a/contacto.html
+++ b/contacto.html
@@ -118,11 +118,17 @@
                
             </div>
             <div class="column column--33">
-                <h2 class="column__title">Siguenos</h2>
-                <p class="column__txt"><a href="" class="icon-facebook">Facebook</a></p>
-                <p class="column__txt"><a href="" class="icon-twitter">Twitter</a></p>
-                <p class="column__txt"><a href="" class="icon-instagram">Instagram</a></p>
-            </div>
+                <h2 class="column__title">Síguenos</h2>
+                <p class="column__txt">
+                    <a href="https://www.facebook.com/profile.php?id=61558604140895&mibextid=ZbWKwL" class="icon-facebook" target="_blank">Facebook</a>
+                </p>
+                <p class="column__txt">
+                    <a href="https://x.com/ADreamGrandLine?t=Jz-FKFKt0YO8qQiyKcvxSg&s=09" class="icon-twitter" target="_blank">Twitter</a>
+                </p>
+                <p class="column__txt">
+                    <a href="https://www.instagram.com/a_dream_in_grand_line?igsh=dmQ3NGp1ZXF3cHE2" class="icon-instagram" target="_blank">Instagram</a>
+                </p>
+            </div>     
             <p class="copy">@ 2024 ADreamInGrandLine | Todos los derechos reservados</p>
         </div>
     </footer>
