--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="column column--33">
                 <h2 class="column__title">Contactenos</h2>
-                <p class="column__txt">Mi calle 123 Talcahuano</p>
+                <p class="column__txt">Correo: adreamingrandline@gmail.com</p>
                 <p class="column__txt">Telefono: +56 9 9305 0536</p>
                
             </div>
