--- a/galeria.html
+++ b/galeria.html
@@ -68,7 +68,8 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Parque Central, Centro Comercial Talcahuano </p>
+                <p class="column__txt">Mall del Centro Concepción
+                    Barros Arana 1068, 4070053 Concepción, Bío Bío</p>
                 <p class="column__txt">
                     Horarios de atención:
                     <br>
