--- a/contacto.html
+++ b/contacto.html
@@ -86,15 +86,7 @@
             <!-- Google Maps -->
             <div class="map-container" style="text-align: center;">
             <h3>Ubicación</h3>
-            <iframe      
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127467.52154884707!2d-73.1469001!3d-36.7201548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96691f91d598cb25%3A0x9c14e1d049cece80!2sTalcahuano%2C%20Chile!5e0!3m2!1ses!2s!4v1680014386763!5m2!1ses!2s" 
-                width="600" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3193.735731349626!2d-73.04771452456927!3d-36.824852072240105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9669b5f607f8d407%3A0xc752b4d932fe12a1!2sMall%20del%20Centro%20Concepci%C3%B3n!5e0!3m2!1ses-419!2scl!4v1713998574353!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      
         </div>
     </section>
 
@@ -102,7 +94,8 @@
         <div class="container container--flex">
             <div class="column column--33">
                 <h2 class="column__title">Visitanos</h2>
-                <p class="column__txt">Parque Central, Centro Comercial Talcahuano </p>
+                <p class="column__txt">Mall del Centro Concepción
+                    Barros Arana 1068, 4070053 Concepción, Bío Bío</p>
                 <p class="column__txt">
                     Horarios de atención:
                     <br>
