--- a/galeria.html
+++ b/galeria.html
@@ -21,7 +21,7 @@
                     </span>
                 </p>
                 <p class="main-header__contactInfo__addres">
-                    <span class="icon-location">Mi calle 123 Talcahuano</span>
+                    <span class="icon-location">Barros Arana 1068, 4070053</span>
                 </p>
                 
             </div>
