--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <li class="menu__item"><a href="contacto.html" class="menu__link">Contacto</a></li>
             </ul>
             <div class="social-icon">
-                <a href="" class="social-icon__link"><span class="icon-facebook"></span></a>
-                <a href="" class="social-icon__link"><span class="icon-twitter"></span></a>
-                <a href="" class="social-icon__link"><span class="icon-instagram"></span></a>
+                <a href="https://www.facebook.com/profile.php?id=61558604140895&mibextid=ZbWKwL" target="_blank" class="social-icon__link"><span class="icon-facebook"></span></a>
+                <a href="https://x.com/ADreamGrandLine?t=Jz-FKFKt0YO8qQiyKcvxSg&s=09" target="_blank" class="social-icon__link"><span class="icon-twitter"></span></a>
+                <a href="https://www.instagram.com/a_dream_in_grand_line?igsh=dmQ3NGp1ZXF3cHE2" target="_blank" class="social-icon__link"><span class="icon-instagram"></span></a>
             </div>
         </div>
     </nav>
